# embed-function

./: .gitignore  LICENSE  README.md
doc/: API_embed_function.md
doc/detail/: constructor.md  destructor.md  make_function.md  operator bool.md  operator().md
include/: embed_function.hpp  embed_function_nostd.hpp
include/embed/: embed_function.hpp  embed_function_nostd.hpp
test/: CMakeLists.txt  ReadMe.md  assign-test.cpp  create_instance-free_function-test.cpp  create_instance-functor-test.cpp  create_instance-lambda-test.cpp  create_instance-member-test.cpp  invoke-test.cpp  main.cpp  size_and_traits-test.cpp  test-001.cpp  test-002.cpp  test-003.cpp  test.hpp
